Update Colors in style.css

--- a/style.css
+++ b/style.css
@@ -10,11 +10,12 @@
   width:90vw;
   height:90vh;
   margin:5vh 5vw;
-  background:#999;
+  background:#fff7e3;
   border-radius: 10px;
 }
 h1{
   padding:20px;
+	color:#666;
 }
 
 .top-triangles, .bottom-triangles {
@@ -26,31 +27,26 @@ h1{
   width:0;
   height:0;
   border-left: 200px solid transparent;
-  border-bottom: 200px solid white;
+  border-bottom: 200px solid #ff9f7f;
+	image-bo
 }
-.one:before{
-		content:"";
-		background: linear-gradient(90deg, rgba(0,0,0,0.65) 0%,rgba(0,0,0,0) 100%);
-		background-size:cover;
-}
-
 .two {
 	width:0;
 	height:0;
 	border-right:200px solid transparent;
-  border-bottom: 200px solid #f1f1f1;
+  border-bottom: 200px solid #fd7e76;
 }
 
 .three {
 	width:0;
 	height:0;
 	border-left:200px solid transparent;
-  border-top: 200px solid #f1f1f1;
+  border-top: 200px solid #fd7e76;
 }
 
 .four {
 	width:0;
 	height:0;
 	border-right:200px solid transparent;
-	border-top: 200px solid white;
+	border-top: 200px solid #d05a5e;
 }
