--- a/style.css
+++ b/style.css
@@ -24,9 +24,11 @@ h1{
 	border-radius:10px;
 	background:#666;
 	color:#fff;
+	margin-bottom:1em;
 }
 .fortune {
 	display:block;
+	height:400px;
 }
 .top-triangles, .bottom-triangles {
   display:flex;
