Recolor triangles & add first lever hover effects

--- a/style.css
+++ b/style.css
@@ -42,17 +42,18 @@ h1{
 .one {
 	width:200px;
 	height:200px;
-	background: #fff;
+	background: #ff9f7f;
 	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
 	clip-path: polygon(100% 0, 0 100%, 100% 100%);
 }
 
 .one-one {
-	width:0;
-	height:-200;
-	position:relative;
-	border-left: 200px solid transparent;
-	border-bottom: 20px solid #ff9f7f;
+    width:200px;
+	height:200px;
+	background: #ff9f7f;
+	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
+	clip-path: polygon(100% 0, 0 100%, 100% 100%);
+    transform:translate(-10px, -10px);
 }
 
 .one-two {
@@ -62,40 +63,62 @@ h1{
   border-bottom: 200px solid #ff9f7f;
 }
 
+.one p {
+    text-align:right;
+    background:orange;
+    margin:120px;
+    color:#fff;  
+}
+
 .two {
 	width:200px;
 	height:200px;
-	background:#f9f9f9;
+	background:#fd7e76;
 	background-image: linear-gradient(90deg, rgba(0,0,20,.06), rgba(0,0,0,0));
 	clip-path: polygon(0 0, 0 100%, 100% 100%);
 }
+
 .two-one {
-	width:0;
-	height:-200;
-	border-right:200px solid transparent;
-    border-bottom: 20px solid #fd7e76;
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image: linear-gradient(90deg, rgba(0,0,20,.06), rgba(0,0,0,0));
+	clip-path: polygon(0 0, 0 100%, 100% 100%);
+    transform:translate(10px, -10px);
 }
-.two-two {
-	width:0;
-	height:0;
-	border-right:20px solid transparent;
-  border-bottom: 200px solid #fd7e76;
+
+.two:hover {
+    z-index:-2;
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image: linear-gradient(90deg, rgba(0,0,20,.06), rgba(0,0,0,0));
+	clip-path: polygon(0 0, 0 100%, 100% 100%);
+}
+
+.two p {
+    margin-top:120px;
+    margin-left:30px;
+    color:#fff;  
 }
 
 .three {
 	width:200px;
 	height:200px;
-	background:#f9f9f9;
+	background:#fd7e76;
 	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
 	clip-path: polygon(100% 100%, 100% 0, 0 0 );
 }
 
 .three-one {
-	width:0;
-	height:0;
-	border-left:200px solid transparent;
-  border-top: 20px solid #fd7e76;
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
+	clip-path: polygon(100% 100%, 100% 0, 0 0 );
+    transform:translate(-10px, 10px);
 }
+
 .three-two {
 	width:0;
 	height:0;
@@ -103,25 +126,42 @@ h1{
   border-top: 200px solid #fd7e76;
 }
 
+.three p {
+    text-align:right;
+    margin-top:40px;
+    margin-right:40px;
+    color:white;  
+}
+
 .four{
 	width:200px;
 	height:200px;
-	background:#f9f9f9;
+	background:#d05a5e;
 	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
 	clip-path: polygon(100% 0, 0 0, 0 100%);
 }
 
-.four-one {
-	width:0;
-	height:0;
-	border-right:200px solid transparent;
-	border-top: 20px solid #d05a5e;
+.four:hover {
+	width:200px;
+	height:200px;
+	background:#d05a5e;
+	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
+	clip-path: polygon(100% 0, 0 0, 0 100%);
+    transform:translate(10px, 10px);
 }
+
 .four-two{
 	width:0;
 	height:0;
 	border-right:20px solid transparent;
 	border-top: 200px solid #d05a5e;
+}
+
+.four p {
+    text-align:left;
+    margin-top:40px;
+    margin-left:40px;
+    color:#fff;  
 }
 
 button{
