--- a/style.css
+++ b/style.css
@@ -64,6 +64,22 @@ h1{
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
+.one-vert {
+	width:200px;
+	height:200px;
+	background: #ff9f7f;
+	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
+	clip-path: polygon(90% 100%, 100% 0, 100% 100%, 90% 100%);
+}
+
+.one-horiz {
+	width:200px;
+	height:200px;
+	background: #ff9f7f;
+	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
+	clip-path: polygon(100% 90%, 100% 100%, 0 100%, 0 100%);
+}
+
 .one p {
     text-align:right;
     background:orange;
@@ -101,6 +117,21 @@ h1{
     margin-left:30px;
     color:#fff;  
 }
+.two-vert {
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image:linear-gradient(45deg, rgba(0,0,20,.1), rgba(0,0,0,0));
+	clip-path: polygon(0 100%, 0 0, 10% 100%, 0 100%);
+}
+
+.two-horiz {
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image:linear-gradient(45deg, rgba(0,0,20,.1), rgba(0,0,0,0));
+	clip-path: polygon(0 90%, 100% 100%, 0 100%, 0 100%);
+}
 
 .three {
 	width:200px;
@@ -134,6 +165,22 @@ h1{
     color:white;  
 }
 
+.three-vert {
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
+	clip-path: polygon(90% 0, 100% 0, 100% 100%, 100% 100%);
+}
+
+.three-horiz {
+	width:200px;
+	height:200px;
+	background:#fd7e76;
+	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
+	clip-path: polygon(0 0, 100% 0, 100% 10%, 0 0);
+}
+
 .four{
 	width:200px;
 	height:200px;
@@ -151,7 +198,7 @@ h1{
     transform:translate(10px, 10px);
 }
 
-.four-hover{
+.four-click{
 	width:200px;
 	height:200px;
 	background:#d05a5e;
@@ -165,6 +212,24 @@ h1{
     margin-left:40px;
     color:#fff;  
 }
+
+.four-vert{
+	width:200px;
+	height:200px;
+	background:#d05a5e;
+	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
+	clip-path: polygon(0 0, 10% 0, 0 100%, 0 100%);
+}
+
+.four-horiz{
+	width:200px;
+	height:200px;
+	background:#d05a5e;
+	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
+	clip-path: polygon(0 0, 100% 0, 50% 50%, 0 100%);
+    clip-path: polygon(0 0, 100% 0, 0 10%, 0 0);
+}
+
 
 button{
 	display:flex;
