Remove line of code in four-click and relink main.js

--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ h1{
 }
 
 .scale {
-		transition: .3s ease-out;
+	transition: .3s ease-out;
 }
 
 .one {
@@ -48,12 +48,12 @@ h1{
 }
 
 .one-hover {
-    width:200px;
+  width:200px;
 	height:200px;
 	background: #ff9f7f;
 	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
 	clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%);
-    transform:translate(-10px, -10px);
+  transform:translate(-10px, -10px);
 }
 
 .one-click {
@@ -81,10 +81,10 @@ h1{
 }
 
 .one p {
-    text-align:right;
-    background:orange;
-    margin:120px;
-    color:#fff;  
+  text-align:right;
+  background:orange;
+  margin:120px;
+  color:#fff;  
 }
 
 .two {
@@ -101,7 +101,7 @@ h1{
 	background:#fd7e76;
 	background-image: linear-gradient(90deg, rgba(0,0,20,.06), rgba(0,0,0,0));
 	clip-path: polygon(0 0, 50% 50%, 100% 100%, 0 100%);
-    transform:translate(10px, -10px);
+  transform:translate(10px, -10px);
 }
 
 .two-click{ 
@@ -113,9 +113,9 @@ h1{
 }
 
 .two p {
-    margin-top:120px;
-    margin-left:30px;
-    color:#fff;  
+  margin-top:120px;
+  margin-left:30px;
+  color:#fff;  
 }
 .two-vert {
 	width:200px;
@@ -155,14 +155,14 @@ h1{
 	height:200px;
 	background:#fd7e76;
 	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .three p {
-    text-align:right;
-    margin-top:40px;
-    margin-right:40px;
-    color:white;  
+  text-align:right;
+  margin-top:40px;
+  margin-right:40px;
+  color:white;  
 }
 
 .three-vert {
@@ -203,14 +203,14 @@ h1{
 	height:200px;
 	background:#d05a5e;
 	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
-    clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
+  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .four p {
-    text-align:left;
-    margin-top:40px;
-    margin-left:40px;
-    color:#fff;  
+  text-align:left;
+  margin-top:40px;
+  margin-left:40px;
+  color:#fff;  
 }
 
 .four-vert{
@@ -226,8 +226,7 @@ h1{
 	height:200px;
 	background:#d05a5e;
 	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
-	clip-path: polygon(0 0, 100% 0, 50% 50%, 0 100%);
-    clip-path: polygon(0 0, 100% 0, 0 10%, 0 0);
+  clip-path: polygon(0 0,100% 0, 0 10%, 0 0);
 }
 
 
