--- a/style.css
+++ b/style.css
@@ -56,14 +56,6 @@ h1{
   transform:translate(-10px, -10px);
 }
 
-.one-click {
-    width:200px;
-	height:200px;
-	background: #ff9f7f;
-	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
-
 .one-vert {
 	width:200px;
 	height:200px;
@@ -104,14 +96,6 @@ h1{
   transform:translate(10px, -10px);
 }
 
-.two-click{ 
-	width:200px;
-	height:200px;
-	background:#fd7e76;
-	background-image: linear-gradient(90deg, rgba(0,0,20,.06), rgba(0,0,0,0));
-	clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
-}
-
 .two p {
   margin-top:120px;
   margin-left:30px;
@@ -141,21 +125,13 @@ h1{
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 50%);
 }
 
-.three-one {
+.three-hover {
 	width:200px;
 	height:200px;
 	background:#fd7e76;
 	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 50%);
     transform:translate(-10px, 10px);
-}
-
-.three-click {
-	width:200px;
-	height:200px;
-	background:#fd7e76;
-	background-image: linear-gradient(rgba(0,0,20,.1), rgba(0,0,0,.01));
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .three p {
@@ -196,14 +172,6 @@ h1{
 	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
 	clip-path: polygon(0 0, 100% 0, 50% 50%, 0 100%);
     transform:translate(10px, 10px);
-}
-
-.four-click{
-	width:200px;
-	height:200px;
-	background:#d05a5e;
-	background-image: linear-gradient(135deg, rgba(0,0,20,.3), rgba(0,0,20,.2));
-  clip-path: polygon(0 0, 100% 0, 100% 100%, 0 100%);
 }
 
 .four p {
