--- a/style.css
+++ b/style.css
@@ -44,7 +44,7 @@ h1{
 	height:200px;
 	background: #ff9f7f;
 	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
-	clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%);
+	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
 }
 
 .one-hover {
@@ -52,7 +52,7 @@ h1{
 	height:200px;
 	background: #ff9f7f;
 	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
-	clip-path: polygon(50% 50%, 100% 0, 100% 100%, 0 100%);
+	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
   transform:translate(-10px, -10px);
 }
 
@@ -61,7 +61,7 @@ h1{
 	height:200px;
 	background: #ff9f7f;
 	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
-	clip-path: polygon(90% 100%, 100% 0, 100% 100%, 90% 100%);
+		clip-path: polygon(100% 0, 80% 100%, 100% 100%);
 }
 
 .one-horiz {
@@ -69,7 +69,8 @@ h1{
 	height:200px;
 	background: #ff9f7f;
 	background-image: linear-gradient(-45deg, rgba(255,255,255,.2), rgba(255,255,255,0));
-	clip-path: polygon(100% 90%, 100% 100%, 0 100%, 0 100%);
+
+	clip-path: polygon(100% 80%, 0 100%, 100% 100%);
 }
 
 .one p {
