--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ h1{
 .fortune {
 	display:block;
 	height:400px;
+	transition: .3s ease-out;
 }
 .top-triangles, .bottom-triangles {
   display:flex;
@@ -36,6 +37,16 @@ h1{
 }
 
 .scale {
+	transition: .3s ease-out;
+}
+
+.scale-one {
+	transform:scale(0.2,1);
+	transition: .3s ease-out;
+}
+
+.scale-two {
+	transform:scale(1,0.2);
 	transition: .3s ease-out;
 }
 
