--- a/style.css
+++ b/style.css
@@ -45,6 +45,11 @@ h1{
 	transition: .3s ease-out;
 }
 
+.scale-one p {
+	display:none;
+	transition: .3s ease-out;
+}
+
 .scale-two {
 	transform:scale(1,0.2);
 	transition: .3s ease-out;
