--- a/style.css
+++ b/style.css
@@ -45,11 +45,6 @@ h1{
 	transition: .3s ease-out;
 }
 
-.scale-one p {
-	display:none;
-	transition: .3s ease-out;
-}
-
 .scale-two {
 	transform:scale(1,0.2);
 	transition: .3s ease-out;
@@ -63,7 +58,7 @@ h1{
 	clip-path: polygon(100% 0, 0% 100%, 100% 100%);
 }
 
-.one-hover {
+.one:hover {
   width:200px;
 	height:200px;
 	background: #ff9f7f;
@@ -104,7 +99,7 @@ h1{
 	clip-path: polygon(0 0, 50% 50%, 100% 100%, 0 100%);
 }
 
-.two-hover {
+.two:hover {
 	width:200px;
 	height:200px;
 	background:#fd7e76;
@@ -142,7 +137,7 @@ h1{
 	clip-path: polygon(0 0, 100% 0, 100% 100%, 50% 50%);
 }
 
-.three-hover {
+.three:hover {
 	width:200px;
 	height:200px;
 	background:#fd7e76;
@@ -182,7 +177,7 @@ h1{
 	clip-path: polygon(0 0, 100% 0, 50% 50%, 0 100%);
 }
 
-.four-hover {
+.four:hover {
 	width:200px;
 	height:200px;
 	background:#d05a5e;
