--- a/style.css
+++ b/style.css
@@ -50,6 +50,13 @@ h1{
 	transition: .3s ease-out;
 }
 
+.step-one{
+	visibility: visible;
+}
+.step-two{
+	visibility:hidden;
+}
+
 .one {
 	width:200px;
 	height:200px;
