--- a/style.css
+++ b/style.css
@@ -26,6 +26,11 @@ h1{
 	color:#fff;
 	margin-bottom:1em;
 }
+
+h2 {
+	text-align:center;
+}
+
 .fortune {
 	display:block;
 	height:400px;
@@ -231,4 +236,8 @@ button{
 	font-size: 1em;
 	margin:auto;
 	margin-top:1em;
+}
+
+button:hover {
+	cursor: pointer;
 }
